--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -87,6 +87,11 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Game/Blueprints/BP_PongGameMode.BP_PongGameMode_C
+EditorStartupMap=/Game/GameMap.GameMap
+GameDefaultMap=/Game/GameMap.GameMap
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -127,7 +132,3 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
-[/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/Blueprints/BP_PongGameMode.BP_PongGameMode_C
-
